<?xml version="1.0"?>
<package format="2">
  <name>interface</name>
  <version>1.0.0</version>
  <description>Interface for the deep_reinforcement_abstract_lfd package</description>

   <maintainer email="mbc2004@cs.unh.edu">Madison Clark-Turner</maintainer>
  <author>Madison Clark-Turner</author>
  <!-- Original design by -->
  <author>Alexander Infantino</author>
  <license>BSD</license>

  <!--Dependencies-->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>nao_msgs</depend>

  <depend>image_transport</depend>

  <depend>qt_build</depend>
  <depend>libqt4-dev</depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib"/>
  </export>

</package>