<?xml version="1.0"?>
<package format="2">
  <name>interface_ros_functions</name>
  <version>1.0.0</version>
  <description>Functions for use with the deep_reinforcement_abstract_lfd interface package</description>

  <maintainer email="mbc2004@cs.unh.edu">Madison Clark-Turner</maintainer>
  <author email="mbc2004@cs.unh.edu">Madison Clark-Turner</author>
  <author>Alexander Infantino</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!--Dependencies-->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nao_interaction_msgs</depend>
  <depend>nao_bridge_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
